@@ -1,115 +1,202 @@
 package com.greendelta.collaboration.service.search;
 
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.openlca.core.model.Direction;
 import org.openlca.core.model.ModelType;
 import org.openlca.core.model.ProcessType;
 import org.openlca.git.model.Commit;
 import org.openlca.git.model.Diff;
 import org.openlca.git.model.DiffType;
 import org.openlca.git.util.Diffs;
+import org.openlca.util.Strings;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import com.greendelta.collaboration.model.InputOutputData;
-import com.greendelta.collaboration.model.InputOutputData.ProcessDescriptor;
-import com.greendelta.collaboration.service.Dao;
 import com.greendelta.collaboration.service.Repository;
+import com.greendelta.collaboration.service.SettingsService;
 import com.greendelta.collaboration.util.Maps;
+import com.greendelta.search.wrapper.SearchClient;
+import com.greendelta.search.wrapper.SearchFilterValue;
+import com.greendelta.search.wrapper.SearchQueryBuilder;
+import com.greendelta.search.wrapper.SearchResult;
 
 @Service
 public class InputOutputDataService {
 
-	private Dao<InputOutputData> dao;
+	private static final int BUFFER_SIZE = 100;
+	private static final Logger log = LogManager.getLogger(InputOutputDataService.class);
+	private final SettingsService settings;
+	private final EntryBuffer buffer;
 
 	@Autowired
-	public InputOutputDataService(Dao<InputOutputData> dao) {
-		this.dao = dao;
+	public InputOutputDataService(SettingsService settings) {
+		this.settings = settings;
+		this.buffer = new EntryBuffer(getClient(), BUFFER_SIZE);
 	}
 
-	public InputOutputData insert(InputOutputData data) {
-		return dao.insert(data);
+	public SearchResult<Map<String, Object>> query(Repository repo, Commit commit, String flowRefId,
+			Direction direction,
+			int page, int pageSize, String filter) {
+		var query = new SearchQueryBuilder();
+		query.filter("repositoryPath", SearchFilterValue.term(repo.path()));
+		query.page(page);
+		query.pageSize(pageSize);
+		query.fields("refId");
+		var value = SearchFilterValue.term(flowRefId);
+		if (direction == Direction.INPUT) {
+			query.filter("inputs", value);
+		} else if (direction == Direction.OUTPUT) {
+			query.filter("outputs", value);
+		} else {
+			query.filter(new String[] { "inputs", "outputs" }, value);
+		}
+		if (!Strings.nullOrEmpty(filter)) {
+			query.filter("versions.name", SearchFilterValue.wildcard("*" + filter + "*"));
+		}
+		query.filter("versions.commitId", SearchFilterValue.term(commit.id));
+		return getClient().search(query.build());
 	}
 
-	public InputOutputData get(Repository repo, Commit commit) {
-		return dao.getFirst("SELECT data FROM InputOutputData data "
-				+ "WHERE data.repositoryPath = :repositoryPath "
-				+ "AND data.commitId = :commitId",
-				Map.of("repositoryPath", repo.path(),
-						"commitId", commit.id));
+	void remove(Repository repo) {
+		var ids = getIds(repo, null);
+		if (ids.isEmpty())
+			return;
+		getClient().remove(ids);
 	}
 
-	public void delete(Repository repo) {
-		dao.update("DELETE FROM InputOutputData data WHERE data.repositoryPath = :repositoryPath",
-				Maps.of("repositoryPath", repo.path()));
+	private Set<String> getIds(Repository repo, Commit commit) {
+		var query = new SearchQueryBuilder()
+				.filter("repositoryPath", SearchFilterValue.term(repo.path()));
+		if (commit != null) {
+			query.filter("versions.commitId", SearchFilterValue.term(commit.id));
+		}
+		return getClient().searchIds(query.build());
 	}
 
-	public void clear() {
-		dao.update("DELETE FROM InputOutputData data", Collections.emptyMap());
+	void clearIndex() {
+		getClient().delete();
+		createIndex();
+	}
+
+	private void createIndex() {
+		try {
+			getClient().create(Map.of(
+					"config", readJson("os-io-config.json"),
+					"mapping", readJson("os-io-mapping.json")));
+		} catch (IOException e) {
+			log.error("Error creating search io index", e);
+		}
+	}
+
+	private String readJson(String resource) throws IOException {
+		var stream = getClass().getResourceAsStream(resource);
+		if (stream == null)
+			return "{}";
+		return new String(stream.readAllBytes(), StandardCharsets.UTF_8);
 	}
 
 	void update(Repository repo, Repository newRepo) {
-		dao.update("UPDATE InputOutputData data SET data.repositoryPath = :newPath WHERE data.repositoryPath = :path",
-				Map.of("path", repo.path(),
-						"newPath", newRepo.path()));
+		var ids = getIds(repo, null);
+		Map<String, Object> update = new HashMap<>();
+		update.put("repositoryPath", newRepo.path());
+		getClient().update(ids, update);
 	}
 
-	void update(Repository repo) {
+	void index(Repository repo) {
 		var commits = repo.commits().find().all();
-		var previous = new InputOutputData();
-		for (var commit : commits) {
-			var data = get(repo, commit);
-			if (data != null) {
-				previous = data;
-				continue;
-			}
-			var current = new InputOutputData();
-			current.repositoryPath = repo.path();
-			current.commitId = commit.id;
-			current.descriptors = new HashMap<>(previous.descriptors);
-			current.inputs = new HashMap<>(previous.inputs);
-			current.outputs = new HashMap<>(previous.outputs);
-			Diffs.of(repo.gitRepo(), commit)
+		Commit previousCommit = null;
+		for (var commitIndex = 0; commitIndex < commits.size(); commitIndex++) {
+			var commit = commits.get(commitIndex);
+			var diffs = Diffs.of(repo.gitRepo(), commit)
 					.filter(Collections.singletonList(ModelType.PROCESS.name()))
-					.withPreviousCommit().stream()
-					.forEach(diff -> put(repo, commit, diff, current));
-			previous = insert(current);
+					.withPreviousCommit();
+			var skip = new HashSet<String>();
+			for (var diff : diffs) {
+				skip.add(diff.refId);
+				if (diff.diffType == DiffType.DELETED)
+					continue;
+				var data = createData(repo, commit, commitIndex, diff);
+				buffer.putInsert(getIndexId(repo.path(), commit.id, diff.refId), data);
+			}
+			buffer.flush();
+			updatePrevious(repo, skip, previousCommit, commit);
+			previousCommit = commit;
 		}
+	}
+
+	private void updatePrevious(Repository repo, Set<String> skipRefIds, Commit previousCommit, Commit commit) {
+		if (previousCommit == null)
+			return;
+		var previous = getForCommit(repo, previousCommit);
+		while (previous.hasNext()) {
+			var data = previous.next();
+			var refId = Maps.getString(data, "refId");
+			var commitId = Maps.getString(data, "commitId");
+			List<Map<String, Object>> versions = Maps.get(data, "versions");
+			if (skipRefIds.contains(refId))
+				continue;
+			var last = versions.get(versions.size() - 1);
+			var lastName = Maps.getString(last, "name");
+			var lastType = ProcessType.valueOf(Maps.getString(last, "processType"));
+			versions.add(Map.of("name", lastName,
+					"processType", lastType,
+					"commitId", commit.id));
+			data.put("versions", versions);
+			buffer.putUpdate(getIndexId(repo.path(), commitId, refId), data);
+		}
+		buffer.flush();
+	}
+
+	private IndexIterator getForCommit(Repository repo, Commit commit) {
+		var query = new SearchQueryBuilder()
+				.filter("repositoryPath", SearchFilterValue.term(repo.path()));
+		if (commit != null) {
+			query.filter("versions.commitId", SearchFilterValue.term(commit.id));
+		}
+		query.fields("refId", "commitId");
+		query.arrayFields("versions.name", "versions.processType", "versions.commitId");
+		return new IndexIterator(getClient(), query, BUFFER_SIZE);
 	}
 
 	@SuppressWarnings("unchecked")
-	private void put(Repository repo, Commit commit, Diff diff, InputOutputData data) {
-		data.inputs.remove(diff.refId);
-		data.outputs.remove(diff.refId);
-		data.descriptors.remove(diff.refId);
-		if (diff.diffType != DiffType.DELETED) {
-			var oid = repo.ids().get(diff.path, commit.id);
-			var d = repo.datasets().parse(oid, "name", "processType", "exchanges.flow.@id",
-					"exchanges.isInput");
-			var name = d.get("name") != null ? d.get("name").toString() : diff.refId;
-			var processType = getProcessType(d.get("processType"));
-			data.descriptors.put(diff.refId, new ProcessDescriptor(diff.refId, name, processType));
-			var flowRefIds = (List<String>) d.get("exchanges.flow.@id");
-			var isInput = (List<String>) d.get("exchanges.isInput");
-			for (var i = 0; i < flowRefIds.size(); i++) {
-				var flowRefId = flowRefIds.get(i);
-				if (Boolean.parseBoolean(isInput.get(i))) {
-					data.inputs.computeIfAbsent(diff.refId, k -> new HashSet<>()).add(flowRefId);
-				} else {
-					data.outputs.computeIfAbsent(diff.refId, k -> new HashSet<>()).add(flowRefId);
-				}
+	private InputOutputData createData(Repository repo, Commit commit, int commitIndex, Diff diff) {
+		var oid = repo.ids().get(diff.path, commit.id);
+		var map = repo.datasets().parse(oid, "name", "processType", "exchanges.flow.@id", "exchanges.isInput");
+		var flowRefIds = (List<String>) map.get("exchanges.flow.@id");
+		var isInput = (List<String>) map.get("exchanges.isInput");
+		var name = Maps.getString(map, "name");
+		var type = Maps.getString(map, "processType");
+		var processType = ProcessType.LCI_RESULT.name().equals(type)
+				? ProcessType.LCI_RESULT
+				: ProcessType.UNIT_PROCESS;
+		var data = new InputOutputData(repo.path(), commit.id, name, processType, diff.refId);
+		for (var i = 0; i < flowRefIds.size(); i++) {
+			var flowRefId = flowRefIds.get(i);
+			if (Boolean.parseBoolean(isInput.get(i))) {
+				data.inputs.add(flowRefId);
+			} else {
+				data.outputs.add(flowRefId);
 			}
 		}
+		return data;
 	}
 
-	private ProcessType getProcessType(Object value) {
-		if (value != null && value.toString().equals("LCI_RESULT"))
-			return ProcessType.LCI_RESULT;
-		return ProcessType.UNIT_PROCESS;
+	private SearchClient getClient() {
+		return settings.searchConfig.getIoDataSearchClient();
+	}
+
+	private String getIndexId(String repositoryPath, String commitId, String processRefId) {
+		return repositoryPath + "/" + commitId + "/" + processRefId;
 	}
 
 }
